feat: реализована аутентификация (регистрация, вход, выход)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-Flask==3.1.1
-flask_sqlalchemy==3.1.1
-pytest==8.0.0
-Requests==2.32.4
-selenium==4.33.0
-webdriver_manager==4.0.2
-SQLAlchemy==2.0.41
-allure-pytest==2.14.3
-Flask-SQLAlchemy==3.1.1
-python-dotenv==1.0.0
+Flask
+flask_sqlalchemy
+pytest
+Requests
+selenium
+webdriver_manager
+SQLAlchemy
+allure-pytest
+Flask-SQLAlchemy
+python-dotenv
+Flask-Login
+Flask-WTF
+Werkzeug
